--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,7 @@ repos:
     hooks:
       - id: trailing-whitespace
       - id: check-json
+      - id: check-yaml
       - id: end-of-file-fixer
   - repo: https://github.com/asottile/reorder_python_imports
     rev: v2.4.0
