--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,8 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f requirements.txt ]; then pip install -r requirements_dev.txt; fi
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -37,3 +36,7 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    - name: Upload coverage
+      run: |
+        coverage xml
+        python-codacy-coverage -r coverage.xml
