Add codacy environmental variable.

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -44,6 +44,8 @@ jobs:
       run: |
         make test
     - name: Upload coverage
+      env:
+        CODACY_PROJECT_TOKEN: $${{ secrets.CODACY_PROJECT_TOKEN }}
       run: |
         coverage xml
         python-codacy-coverage -r coverage.xml
