--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,8 +15,8 @@ repos:
     hooks:
       - id: black
         language_version: python3 # Should be a command that runs python3.6+
-  - repo: https://github.com/pycqa/pydocstyle
-    rev: 6.1.1  # pick a git hash / tag to point to
-    hooks:
-      - id: pydocstyle
-        exclude: test_*
+          #   - repo: https://github.com/pycqa/pydocstyle
+          #     rev: 6.1.1  # pick a git hash / tag to point to
+          #     hooks:
+          #       - id: pydocstyle
+          #         exclude: test_*
